# playwright-mcp-server

./: .env.example  .gitignore  README.md  UPDATE_SUMMARY.md  VERIFICATION_CHECKLIST.md  pyproject.toml  requirements.txt
src/: __init__.py  browser_manager.py  server.py
tests/: __init__.py  manual_test.py  test_server.py
